--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -13,31 +13,31 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-414
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://characters/slime/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://weapons/", "res://characters/")
+dock_filesystem_selected_paths=PackedStringArray("res://survivors_game.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://weapons/pistol/", "res://map_elements/rock/", "res://characters/", "res://characters/slime/", "res://assets/", "res://assets/audio/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://characters/happy_boo/player.tscn", "res://map_elements/tree/tree.tscn", "res://map_elements/rock/rock.tscn", "res://characters/slime/slime.tscn", "res://characters/happy_boo/happy_boo.tscn", "res://survivors_game.tscn", "res://characters/slime/mob.tscn")
-current_scene="res://characters/slime/mob.tscn"
+open_scenes=PackedStringArray("res://characters/happy_boo/player.tscn", "res://map_elements/tree/tree.tscn", "res://characters/slime/slime.tscn", "res://characters/happy_boo/happy_boo.tscn", "res://characters/slime/mob.tscn", "res://map_elements/rock/rock.tscn", "res://weapons/pistol/gun.tscn", "res://weapons/pistol/bullet.tscn", "res://survivors_game.tscn")
+current_scene="res://survivors_game.tscn"
 center_split_offset=-425
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://weapons/pistol/Bullet.gd", "res://global_vars/character_data.gd", "res://weapons/pistol/gun.gd", "res://characters/happy_boo/happy_boo.gd", "res://characters/slime/mob.gd", "res://characters/happy_boo/player.gd", "res://characters/slime/slime.gd", "res://survivors_game.gd"]
-selected_script="res://characters/slime/mob.gd"
+selected_script="res://survivors_game.gd"
 open_help=["Node"]
 script_split_offset=70
 list_split_offset=0
